Commit Changes to Data Formatting and Storage THE3

--- a/Take-Home_Exercise/TakeHomeEx03/TakeHomeEx03.qmd
+++ b/Take-Home_Exercise/TakeHomeEx03/TakeHomeEx03.qmd
@@ -105,7 +105,7 @@ We observe that there are 44 Districts within the Area of Jakarta once aggregate
 -   Weather Conditions
 
 ```{r}
-trips <- readRDS("data/trip_data.rds")
+trips <- readRDS("data/rds/trip_data.rds")
 ```
 
 ```{r}
